--- a/template/payment.html
+++ b/template/payment.html
@@ -1,86 +1,326 @@
 {% load static %}
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payment</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
+    <title>Register</title>
 </head>
 
 <body>
-    <div class="payment">
-        <form action="{% url 'payment' %}" class="submition" method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            <h1>Registration Fee Rs.500</h1>
+   
+    <!-- Optional JavaScript; choose one of the two! -->
 
-            <h2>Please Pay With Razorpay for form submition.</h2>
-            <script src="https://checkout.razorpay.com/v1/checkout.js" data-key="rzp_test_k4dKLS5hNZx8t0"
-                data-amount="50000" data-currency="INR" data-order_id="{{payment.id}}"
-                data-buttontext="Pay-Now" data-name="Riyazi-Quiz"
-                data-description="Registarion fee is fixed" data-image="{% static 'img/quizlogo.png' %}"
-                data-prefill.name="RQ" data-prefill.email="Enter Your Email" data-theme.color="#130580">
-                </script>
-        </form>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+    -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <!-- what will disable & what shown  -->
+    <script>
+        window.onload = function () {
+            $(".backbtn").show()
+            $(".form-control").attr("disabled", true)
+            $(".form-select").attr("disabled", true)
+            $(".form-check-input").attr("disabled", true)
+            $(".btn.btn-primary").attr("disabled", true)
+        }
+    </script>
+
+    <!-- this script for payment confirmation  -->
+ 
+    <div class="form">
+        <div class="payment">
+            <form action="{% url 'payment' %}" class="submition" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                <h2>User Register</h2>
+                <div class="payy">
+                    <label for="text" class="form-label">Please pay the registraion amount first</label>
+                </div>
+                <script src="https://checkout.razorpay.com/v1/checkout.js" data-key="rzp_test_k4dKLS5hNZx8t0"
+                    data-amount="50000" data-currency="INR" data-order_id="{{payment.id}}" data-buttontext="Pay-Now"
+                    data-name="Riyazi-Quiz" data-description="Registarion fee is fixed"
+                    data-image="{% static 'img/quizlogo.png' %}" data-prefill.name="RQ"
+                    data-prefill.email="Your Email_Id" data-theme.color="#130580">
+                    </script>
+            </form>
+        </div>
+        <div id="register_form">
+            <form action="{% url 'register' %}" class="submition" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+
+                <center>
+                    {% if messages %}
+                    {% for msg in messages %}
+                    <code style="background-color: yellow;">{{msg}}</code>
+                    {% endfor %}
+                    {% endif %}
+
+                </center>
+
+                <div class="details">
+                    <div class="row">
+                        <div class="col">
+                            <label for="text" class="form-label">First Namel</label>
+                            <input type="text" class="form-control" placeholder="First name" aria-label="First name"
+                                name="First_name" required>
+                        </div>
+                        <div class="col">
+                            <label for="text" class="form-label">Last Namel</label>
+                            <input type="text" class="form-control" placeholder="Last name" aria-label="Last name"
+                                name="Last_name" required>
+                        </div>
+                    </div><br>
+                    <div class="row">
+                        <div class="col">
+                            <label for="email" class="form-label">Email Id</label>
+                            <input type="email" class="form-control" id="email" name="Email"
+                                placeholder="Enter Your Email_Id" required>
+                        </div>
+                        <div class="col">
+                            <label for="text" class="form-label">Mobile Number</label>
+                            <input type="text" class="form-control" placeholder="Mobile number"
+                                aria-label="Mobile Number" name="Mobile" required>
+                        </div>
+                    </div><br>
+                    <div class="col">
+                        <label for="inputAddress" class="form-label">Address 1</label>
+                        <input type="text" class="form-control" id="inputAddress" placeholder="House No..Building Name"
+                            name="Address1" required>
+                    </div><br>
+                    <div class="col">
+                        <label for="inputAddress" class="form-label">Address 2</label>
+                        <input type="text" class="form-control" id="inputAddress" placeholder="Road Name,Area,Colony"
+                            name="Address2" required>
+                    </div><br>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <label for="inputCity" class="form-label">City</label>
+                            <input type="text" class="form-control" id="inputCity" placeholder="City Name" name="City"
+                                required>
+                        </div>
+                        <div class="col-md-4">
+                            <label for="inputState" class="form-label">State</label>
+                            <select id="inputState" class="form-select" name="State" required>
+                                <option selected>Choose...</option>
+                                <option>Andhra-Pradesh</option>
+                                <option>Arunachal-Pradesh</option>
+                                <option>Assam </option>
+                                <option>Bihar </option>
+                                <option>Chhattisgarh </option>
+                                <option>Goa </option>
+                                <option>Gujarat </option>
+                                <option>Haryana </option>
+                                <option>Himachal-Pradesh</option>
+                                <option>Jharkhand</option>
+                                <option>Karnataka</option>
+                                <option>Kerala</option>
+                                <option>Madhya-Pradesh</option>
+                                <option>Maharashtra</option>
+                                <option>Manipur</option>
+                                <option>Meghalaya</option>
+                                <option>Mizoram</option>
+                                <option>Nagaland</option>
+                                <option>Odisha</option>
+                                <option>Punjab</option>
+                                <option>Rajasthan</option>
+                                <option>Sikkim</option>
+                                <option>Tamil-Nadu</option>
+                                <option>Telangana</option>
+                                <option>Tripura</option>
+                                <option>Uttar-Pradesh</option>
+                                <option>Uttarakhand</option>
+                                <option>West-Bengal</option>
+                            </select>
+                        </div>
+                        <div class="col-md-4">
+                            <label for="inputZip" class="form-label">Pincode</label>
+                            <input type="text" class="form-control" id="inputZip" placeholder="Enter Pincode"
+                                name="Pincode" required>
+                        </div>
+                    </div><br>
+
+                    <div class="col">
+                        <div class="mb-3">
+                            <label for="formFileSm" class="form-label">Choose Image (.jpeg, .jpg, .png)</label>
+                            <input class="form-control" type="file" id="formFile" name="picture" required>
+                        </div>
+                    </div><br>
+                    <div class="col-12">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="gridCheck" required>
+                            <label class="form-check-label" for="gridCheck">
+                                Check me out
+                            </label>
+                        </div>
+                    </div><br>
+                    <div class="col-12">
+                        <button type="submit" onclick="sucss" class="btn btn-primary">Submit</button><br><br>
+                    </div>
+            </form>
+        </div>
     </div>
     <div class="backbtn">
-        <a href="{% url 'about' %}"><button type="button" class="btn btn-outline-warning" id="bton">Back-to-Home</button></a>
+        <a href="{% url 'about' %}"><button type="button" class="btn btn-outline-warning">Back-to-Home</button></a>
     </div>
-    <script>
-        
-    </script>
+
+
     <style>
+        button.success {
+            cursor: pointer;
+            background-color: #27ae60;
+            border-radius: 30px;
+        }
+        .danger {
+            cursor: pointer;
+            background-color: #EF6050;
+            border-radius: 30px;
+        }
         .payment {
+            text-align: center;
+        }
+
+        .payy {
+            margin-top: 5%;
+            margin-bottom: 3%;
+            text-align: center;
+            letter-spacing: 0.1rem;
+            font-size: 1.1rem;
+            background-color: white;
+            border-radius: 4px;
+            color: black;
+        }
+
+        .razorpay-payment-button {
+            padding: 1.4%;
+            background-color: #0d6efd;
+            border-radius: 20px;
+            color: white;
+            border: 2px solid #0d6efd;
+            font-size: 0.8rem;
+            font-family: 'Dancing Script', cursive;
+            font-weight: bold;
+            margin-bottom: 0%;
+        }    
+
+        body {
             background-image: url("{% static 'img/music.jpg' %}");
             background-size: cover;
-            background-position: right;
-
+            background-position: center fixed;
             font-family: 'Dancing Script', cursive;
-            color: white;
-            text-align: center;
-            margin-top: 15%;
-            padding-top: 1%;
-            padding-bottom: 2%;
         }
-        .success{
-            cursor: pointer;
-        }
-        body {
-            background-color: black;
-            padding: 0%;
-            margin: 0%;
 
+        ::-webkit-scrollbar {
+            display: none;
+        }
+
+        .form {
+            margin-left: 25%;
+            margin-right: 25%;
+            margin-top: 3%;
+            margin-bottom: 3%;
+        }
+
+        #eml {
+            display: none;
+        }
+
+        .submition {
+            background-color: rgba(0, 0, 0, 0.2);
+            padding-left: 5%;
+            padding-right: 5%;
+            color: white;
+        }
+
+        .details {
+            margin-top: 4%;
+            opacity: .7;
         }
 
         .backbtn {
             text-align: center;
-            margin-top: 7%;
+            margin-top: 3%;
             font-family: 'Dancing Script', cursive;
         }
-        .razorpay-payment-button{
-            padding: 0.6%;
-            background-color: transparent;
-            border: 2px solid white;
-            font-family: 'Dancing Script', cursive;
-            color: white;
-        }
-        .razorpay-payment-button:hover{
-            background-color: white;
-            color: black;
-        }
-        #bton{
-            border: 2px solid yellow;
-            background-color: transparent;
-            color: yellow;
-            padding: 0.6%;
-            font-family: 'Dancing Script', cursive;
 
+        .btn.btn-primary,
+        .btn.btn-outline-warning {
+            border-radius: 20px;
         }
-        #bton:hover{
-            background-color: yellow;
-            color: black;
-        }
+        @media screen and (max-width: 1200px) {
+            .form-label,.form-control,.btn.btn-primary,.form-check-label,.form-check-input,.form-select,.btn.btn-outline-warning{
+                font-size: 0.9rem;
+            }
+            .form {
+                margin-left: 20%;
+                margin-right: 20%;
+                margin-top: 3%;
+                margin-bottom: 3%;
+            }
+            }
+        @media screen and (max-width: 850px) {
+            .form-label,.form-control,.btn.btn-primary,.form-check-label,.form-check-input,.form-select,.btn.btn-outline-warning{
+                font-size: 0.8rem;
+            }
+            .form {
+                margin-left: 20%;
+                margin-right: 20%;
+                margin-top: 3%;
+                margin-bottom: 3%;
+            }
+            .razorpay-payment-button {
+                padding: 1.4%;
+                font-size: 0.7rem;
+            }
+            }
+            @media screen and (max-width: 550px) {
+                .form-label,.form-control,.btn.btn-primary,.form-check-label,.form-check-input,.btn.btn-outline-warning{
+                    font-size: 0.6rem;
+                }
+                .form {
+                    margin-left: 15%;
+                    margin-right: 15%;
+                    margin-top: 3%;
+                    margin-bottom: 3%;
+                }
+                .razorpay-payment-button {
+                    padding: 1.4%;
+                    font-size: 0.6rem;
+                }
+                }
+                @media screen and (max-width: 350px) {
+                    .form-label,.form-control,.form-select,.btn.btn-primary,.btn.btn-outline-warning,.form-check-label,.form-check-input{
+                        font-size: 0.5rem;
+                    }
+                    .form {
+                        margin-left: 10%;
+                        margin-right: 10%;
+                        margin-top: 3%;
+                        margin-bottom: 3%;
+                    }
+                    .razorpay-payment-button {
+                        padding: 1.4%;
+                        font-size: 0.5rem;
+                    }
+                    .btn.btn-outline-warning{
+                        font-size: 0.5rem;
+                        padding: 2%;
+                    }
+                    }
     </style>
 </body>
 
