--- a/template/quiz.html
+++ b/template/quiz.html
@@ -17,8 +17,8 @@
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
   <title>MCQs</title>
+
   <script type="text/javascript">
-    //function preback() {window.history.forward();}
     function preback() { window.history.forward(); }
     setTimeout("preback()", 0);
     window.onunload = function () { null };
@@ -28,9 +28,9 @@
 </head>
 
 <body>
-  <h1 class="headline">Let's Start the Quiz</h1>
+  <h1 class="headline"> Let's Start the Quiz</h1>
   <div class="timset">
-    <img src="{% static 'img/time.jpg' %}" alt="timer" style="height: 12vh;">
+    <img src="{% static 'img/time.jpg' %}" alt="timer" style="height: 12vh;" class="timeimg">
     <h5 id="timer"></h5>
   </div><br>
 
@@ -38,7 +38,7 @@
     {% for i in message %}
     <div class="display">
 
-      <h5> Q.) {{i.question}} ?</h5><br>
+      <h5 class="quess"> Q.) {{i.question}} ?</h5><br>
       <div class="form-check">
         <label class="form-check-label">
           <input type="radio" class="form-check-input" id="radiobttn" name="optradio" value="Option1">{{i.option1}}
@@ -79,14 +79,12 @@
       <a href="?page={{ message.next_page_number }}" id="btton"><button type="button"
           class="btn btn-success">Next</button></a>
       {% else %}
-      <a href="{% url 'test' %}" id="done"><button type="button" class="btn btn-outline-primary">Go-To-Next</button></a>
+      <a href="{% url 'congrats' %}" id="done"><button type="button"
+          class="btn btn-outline-primary">Go-To-Next</button></a>
       {% endif %}
     </div>
     {% endif %}
   </div>
-
-
-
 
   <!-- added for scripting and this is jquery      -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -126,9 +124,6 @@
               $('#correctans').fadeIn()
               $('#timer').fadeOut()
               $('#done').fadeIn()
-
-
-              //for (var s = 0; s < final.length; s++) {
             }
             else {
               var final = document.getElementById("correctans").innerHTML = "Wrong Answer";
@@ -177,7 +172,7 @@
 
     .form-check:hover {
       background-color: rgb(7, 7, 80);
-      border: 1px solid rgb(6, 58, 92);
+      border: 1px solid rgb(7, 7, 80);
       color: white;
       transition: 0.4s;
       border-radius: 25px;
@@ -260,15 +255,284 @@
       margin-left: 25%;
       margin-right: 25%;
     }
-  #done {
-    border-radius: 20px;
-    display: none;
-  }
-  .btn.btn-outline-primary{
-    background-color: rgb(7, 7, 80);
-border-radius: 20px;
-    color: white;
-  }
+
+    #done {
+      border-radius: 20px;
+      display: none;
+      margin-left: -6%;
+    }
+
+    .btn.btn-outline-primary {
+      background-color: rgb(7, 7, 80);
+      border: 2px solid rgb(7, 7, 80);
+      color: white;
+      font-size: 0.9rem;
+    }
+
+    @media screen and (max-width: 900px) {
+      .headline {
+        margin: 5% 0%;
+        font-size: 1.8rem;
+        padding: 0.7%;
+      }
+
+      .display {
+        margin-left: 22;
+        margin-right: 22%;
+      }
+
+      .form-check-input,
+      .form-check-label,
+      .bton.btn.btn-success {
+        font-size: 0.9rem;
+      }
+
+      .quess {
+        font-size: 1rem;
+      }
+
+      #timer {
+        font-size: 1.2rem;
+      }
+
+      #btnn.bton,
+      button.btn.btn-success {
+        font-size: 0.8rem;
+      }
+
+      #correctans,
+      #UserAnswer,
+      .sol {
+        font-size: 0.9rem;
+      }
+
+      #done {
+        border-radius: 20px;
+        display: none;
+        margin-left: -6%;
+      }
+
+      .btn.btn-outline-primary {
+        background-color: rgb(7, 7, 80);
+        border: 2px solid rgb(7, 7, 80);
+        color: white;
+        font-size: 0.8rem;
+      }
+    }
+
+    @media screen and (max-width: 700px) {
+      .headline {
+        margin: 7% 0%;
+        padding: 0.6%;
+        font-size: 1.7rem;
+      }
+
+      .display {
+        margin-left: 18;
+        margin-right: 18%;
+      }
+
+      .form-check-input,
+      .form-check-label {
+        font-size: 0.8rem;
+      }
+
+      .timeimg {
+        margin-bottom: 3%;
+      }
+
+      #btnn.bton,
+      button.btn.btn-success {
+        font-size: 0.7rem;
+      }
+
+      .quess {
+        font-size: 0.8rem;
+      }
+
+      #timer {
+        font-size: 1rem;
+      }
+
+      #correctans,
+      #UserAnswer,
+      .sol {
+        font-size: 0.8rem;
+      }
+
+      .next {
+        text-align: center;
+        padding-left: 43%;
+        margin: 2%;
+      }
+
+      .ans {
+        margin-left: 30%;
+        margin-right: 25%;
+        text-align: center;
+      }
+
+      #correctans {
+        padding: 0.5%;
+        margin-left: 30%;
+        margin-right: 25%;
+      }
+
+      #done {
+        border-radius: 20px;
+        display: none;
+        margin-left: 0%;
+      }
+
+      .btn.btn-outline-primary {
+        background-color: rgb(7, 7, 80);
+        border: 2px solid rgb(7, 7, 80);
+        color: white;
+        font-size: 0.6rem;
+      }
+    }
+
+    @media screen and (max-width: 500px) {
+      .headline {
+        margin: 7% 0%;
+        padding: 0.6%;
+        font-size: 1.4rem;
+      }
+
+      .display {
+        margin-left: 24;
+        margin-right: 24%;
+      }
+
+      .form-check-input,
+      .form-check-label {
+        font-size: 0.7rem;
+      }
+
+      #btnn.bton,
+      button.btn.btn-success {
+        font-size: 0.6rem;
+      }
+
+      .quess {
+        font-size: 0.7rem;
+      }
+
+      #timer {
+        font-size: 0.7rem;
+      }
+
+      .timeimg {
+        margin-bottom: 3%;
+      }
+
+      #correctans,
+      #UserAnswer,
+      .sol {
+        font-size: 0.7rem;
+      }
+
+      .next {
+        text-align: center;
+        padding-left: 41%;
+        margin: 2%;
+      }
+
+      .form-check {
+        padding-bottom: 0.5%;
+        padding-top: 0.5%;
+        margin-bottom: 2%;
+      }
+
+      .ans {
+        margin-left: 25%;
+        margin-right: 25%;
+        text-align: center;
+      }
+
+      #correctans {
+        padding: 0.5%;
+        margin-left: 25%;
+        margin-right: 25%;
+      }
+
+      #done {
+        border-radius: 20px;
+        display: none;
+        margin-left: -6%;
+      }
+    }
+
+    @media screen and (max-width: 300px) {
+      .headline {
+        margin: 9% 0%;
+        padding: 0.5%;
+        font-size: 1.1rem;
+      }
+
+      .display {
+        margin-left: 18;
+        margin-right: 18%;
+      }
+
+      .form-check-input,
+      .form-check-label {
+        font-size: 0.5rem;
+      }
+
+      #btnn.bton,
+      button.btn.btn-success {
+        font-size: 0.4rem;
+      }
+
+      .quess {
+        font-size: 0.5rem;
+      }
+
+      #timer {
+        font-size: 0.5rem;
+      }
+
+      .timeimg {
+        margin-bottom: 3%;
+      }
+
+      #correctans,
+      #UserAnswer,
+      .sol {
+        font-size: 0.5rem;
+      }
+
+      .next {
+        text-align: center;
+        padding-left: 41%;
+        margin: 2%;
+      }
+
+      .form-check {
+        padding-bottom: 0.2%;
+        padding-top: 0.2%;
+        margin-bottom: 1.5%;
+      }
+
+      .ans {
+        margin-left: 30%;
+        margin-right: 25%;
+        text-align: center;
+      }
+
+      #correctans {
+        padding: 0%;
+        margin-left: 30%;
+        margin-right: 25%;
+      }
+
+      #done {
+        border-radius: 20px;
+        display: none;
+        margin-left: -10%;
+      }
+    }
   </style>
 </body>
 
