--- a/template/register.html
+++ b/template/register.html
@@ -28,8 +28,15 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
     -->
+   
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-
+    <!-- what will disable & what shown  -->
+    <script>
+        window.onload = function () {
+            alert("Thanks for Payment! Please fill the form for registration.")
+        }
+    </script>
     <div class="form">
         <form action="{% url 'register' %}" class="submition" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
@@ -38,7 +45,7 @@
                 <h2>User Register</h2>
                 {% if messages %}
                 {% for msg in messages %}
-                <code style="background-color: yellow;">{{msg}}</code>
+                <code class="error"  style="background-color: yellow;">{{msg}}</code>
                 {% endfor %}
                 {% endif %}
 
@@ -141,7 +148,7 @@
                     </div>
                 </div><br>
                 <div class="col-12">
-                    <button type="submit" class="btn btn-primary">Proceed for Payment</button><br><br>
+                    <button type="submit" onclick="sucss" class="btn btn-primary">Submit</button><br><br>
                 </div>
         </form>
     </div>
@@ -157,7 +164,9 @@
             background-position: center fixed;
             font-family: 'Dancing Script', cursive;
         }
-
+        .error{
+            padding: 1.1%;        
+        }
         ::-webkit-scrollbar {
             display: none;
         }
@@ -168,7 +177,9 @@
             margin-top: 3%;
             margin-bottom: 3%;
         }
-
+        #eml{
+            display: none;
+        }
         .submition {
             background-color: rgba(0, 0, 0, 0.2);
             padding: 5%;
@@ -187,6 +198,83 @@
         .btn.btn-primary,.btn.btn-outline-warning{
             border-radius: 20px;
         }
+        @media screen and (max-width: 950px) {
+            .form-label,.form-control,.btn.btn-primary,.form-check-label,.form-check-input,.btn.btn-outline-warning{
+                font-size: 1rem;
+            }
+            .form-control,.form-select{
+             font-size: 0.9rem;
+             padding: 1%;
+            }
+            .form {
+                margin-left: 17%;
+                margin-right: 17%;
+                margin-top: 3%;
+                margin-bottom: 3%;
+            }
+            h2{
+                font-size: 1.6rem;
+            }
+            .error{
+                font-size: 0.9rem;
+                padding: 1.1%;        
+            }
+            }
+        @media screen and (max-width: 850px) {
+        .form-label,.form-control,.btn.btn-primary,.form-check-label,.form-check-input,.form-select,.btn.btn-outline-warning{
+            font-size: 0.8rem;
+        }
+        .form {
+            margin-left: 20%;
+            margin-right: 20%;
+            margin-top: 3%;
+            margin-bottom: 3%;
+        }
+        h2{
+            font-size: 1.6rem;
+        }
+        .error{
+            font-size: 0.8rem;
+            padding: 1%;
+        }
+        }
+        @media screen and (max-width: 550px) {
+            .form-label,.form-control,.btn.btn-primary,.form-check-label,.form-check-input,.btn.btn-outline-warning{
+                font-size: 0.7rem;
+            }
+            .form {
+                margin-left: 15%;
+                margin-right: 15%;
+                margin-top: 3%;
+                margin-bottom: 3%;
+            }
+            h2{
+                font-size: 1.4rem;
+            }
+            .error{
+                font-size: 0.7rem;
+                padding: 1.1%;
+        
+            }
+            }
+            @media screen and (max-width: 350px) {
+                .form-label,.form-control,.form-select,.btn.btn-primary,.btn.btn-outline-warning,.form-check-label,.form-check-input{
+                    font-size: 0.6rem;                
+                }
+                .form {
+                    margin-left: 10%;
+                    margin-right: 10%;
+                    margin-top: 3%;
+                    margin-bottom: 3%;
+                }
+                h2{
+                    font-size: 1.1rem;
+                }
+                .error{
+                    font-size: 0.6rem;
+                    padding: 1.1%;
+                }
+                }
     </style>
 </body>
 
