heroku url add in admin

--- a/template/navbar.html
+++ b/template/navbar.html
@@ -34,7 +34,7 @@
         <li class="item"><a href="/about">About</a></li>
         <li class="item"><a href="/payment">Register-Now</a></li>
         <li class="item"><a href="/logout">Logout</a></li>
-        <li class="item" id="admin"><a href="http://127.0.0.1:8000/admin/login/?next=/admin/">Admin</a></li>
+        <li class="item" id="admin"><a href="https://riyazi-quiz.herokuapp.com/admin">Admin</a></li>
         {% endif %}
       </ul>
     </div>
